Supermatter Engine (Port From White Dream) (#341)
![SM
boom](https://github.com/Simple-Station/Einstein-Engines/assets/16548818/6937c520-0963-437c-a9a6-49afe6c8b787)

![New edge
supermatter](https://github.com/Simple-Station/Einstein-Engines/assets/16548818/e8305536-b777-41f8-b9bf-295d402dc1bf)

This PR has been produced in collaboration with coders from White Dream,
with written permission given by the relevant code owners to port this
specific slice of content to Einstein-Engines. Supermatter Engines are a
form of nuclear reactor, which produces energy in the form of
radioactive particles, while also decaying into Phoron when excited by
an external energy source.

Power can be obtained from the engine via radiation collectors, which
like those of a singularity engine, must be periodically refueled. In
addition, the engine must also be actively cooled via aid from
Atmospherics, and for undesirable gasses to be extracted from the
reactor chamber.

If not cooled, the crystal will begin to destabilize and eventually
collapse into one of three different situations depending on the source
of its instability.
1. A nuclear blast.
2. A gravitational singularity
3. A Tesla ball

:cl: VMSolidus, White Dream, Colin-Tel
- add: Supermatter Engines have been implemented.

---------

Signed-off-by: VMSolidus <evilexecutive@gmail.com>
Co-authored-by: whateverusername0 <whateveremail>
Co-authored-by: username <113782077+whateverusername0@users.noreply.github.com>
Co-authored-by: Danger Revolution! <142105406+DangerRevolution@users.noreply.github.com>
Co-authored-by: Pieter-Jan Briers <pieterjan.briers@gmail.com>
Co-authored-by: DEATHB4DEFEAT <77995199+DEATHB4DEFEAT@users.noreply.github.com>

--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/morgue.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/morgue.yml
@@ -131,6 +131,7 @@
     solution: food
   - type: Extractable
     grindableSolutionName: food
+  - type: SupermatterImmune
 
 - type: entity
   parent: Ash
