Bahama Mama's: (New) Alternative POI to Tinnia's Rest (#1932)
* Adds new POI

* Adds Yip Yip to Bahama Mama's (thanks, PolterTzi)

* Yip Yip palettes for consistent appearance

* bar firelocks, yipyip, temp fax fix, other tweaks

* adjusts yip yip descriptions somewhat

* Update warp_point.yml

* Hide the Yip Yip palettes, touch up yip/pun

* noSpawn cleanup

* hide yip yip's palettes

* give yip yip non-antag rules

* kitchen signs

* Contraband dead drop posters, freezer dir fans

* Bahama Mama's: remove invalid configurators

* rework hydro and anchor stuff

* anchor the smokes for consistency

---------

Co-authored-by: Whatstone <whatston3@gmail.com>
Co-authored-by: Dvir <39403717+dvir001@users.noreply.github.com>

--- a/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
@@ -153,6 +153,15 @@
     location: Derelict McCargo
 
 - type: entity
+  id: WarpPointNFBahama
+  parent: WarpPoint
+  suffix: POI, Bahama
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: Bahama Mama's
+
+- type: entity
   id: WarpPointNFEdison
   parent: WarpPoint
   suffix: POI, Edison
@@ -162,4 +171,3 @@
     location: Edison Power Plant
 
 # Events
-
