--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/Misc/identification_cards.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/Misc/identification_cards.yml
@@ -253,7 +253,15 @@
     - state: pirate
     - state: idpiratefirstmate
 
-# Pets
+- type: entity
+  parent: PunPunIDCard
+  id: YipYipIDCard
+  name: yip yip ID card
+  components:
+  - type: PresetIdCard
+    name: Yip Yip
+
+# Cats
 - type: entity
   parent: CourierIDCard
   id: ClippyIDCard
