--- a/Resources/Prototypes/_NF/PointsOfInterest/tinniasrest.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/tinniasrest.yml
@@ -14,6 +14,7 @@
   rangeMin: 1200
   rangeMax: 2900
   iffColor: "#ffa600" #yellorange for faction style
+  spawnGroup: RestStop
   gridPath: /Maps/_NF/POI/tinnia.yml
 
 - type: gameMap
