--- a/Resources/Prototypes/_NF/Recipes/Lathes/robotics.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/robotics.yml
@@ -20,3 +20,4 @@
     Glass: 500
     Plastic: 250
     Bluespace: 200 # OreBagOfHolding Bluepsace price
+    Diamond: 100 # MiningDrillDiamond Diamond price
