--- a/Resources/Prototypes/_NF/Entities/Objects/Specific/Robotics/borg_modules.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Specific/Robotics/borg_modules.yml
@@ -10,7 +10,8 @@
   - type: Sprite
     layers:
     - state: cargo
-    - state: icon-mining
+    - state: icon-advancedmining
+      sprite: _NF/Objects/Specific/Robotics/borgmodule.rsi
   - type: ItemBorgModule
     items:
     - MiningDrillDiamond
@@ -27,7 +28,8 @@
   - type: Sprite
     layers:
     - state: medical
-    - state: icon-treatment
+    - state: icon-paramedic
+      sprite: _NF/Objects/Specific/Robotics/borgmodule.rsi
   - type: ItemBorgModule
     items:
     - HandheldHealthAnalyzerUnpowered
