Probably still missing a ton of things

--- a/Resources/Prototypes/_EE/Entities/Structures/Power/Generation/Supermatter/supermatter.yml
+++ b/Resources/Prototypes/_EE/Entities/Structures/Power/Generation/Supermatter/supermatter.yml
@@ -11,7 +11,7 @@
       range: 5
       volume: 0
       sound:
-        path: /Audio/Supermatter/calm.ogg
+        path: /Audio/_EE/Supermatter/calm.ogg
     - type: Physics
     - type: Speech
       speechSounds: Pai
