Pirate contraband turn-in

--- a/Resources/Maps/_NF/POI/cove.yml
+++ b/Resources/Maps/_NF/POI/cove.yml
@@ -4912,7 +4912,7 @@ entities:
     - type: Transform
       pos: 4.5399175,2.4303112
       parent: 1
-- proto: ComputerBroken
+- proto: ComputerContrabandPalletConsolePirate
   entities:
   - uid: 686
     components:
