--- a/Resources/Prototypes/_NF/Entities/Structures/Storage/Crates/crates.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Storage/Crates/crates.yml
@@ -108,6 +108,7 @@
   - type: Contraband
     turnInValues:
       FrontierUplinkCoin: 3
+      Doubloon: 2
   - type: DisableShipyardSale
     reason: shipyard-console-contraband-onboard
     allowedShipyardTypes:
@@ -144,6 +145,7 @@
   - type: Contraband
     turnInValues:
       FrontierUplinkCoin: 3
+      Doubloon: 2
   - type: DisableShipyardSale
     reason: shipyard-console-contraband-onboard
     allowedShipyardTypes:
@@ -180,6 +182,7 @@
   - type: Contraband
     turnInValues:
       FrontierUplinkCoin: 3
+      Doubloon: 2
   - type: DisableShipyardSale
     reason: shipyard-console-contraband-onboard
     allowedShipyardTypes:
