--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/toy_projectiles.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/toy_projectiles.yml
@@ -11,6 +11,7 @@
     impactEffect: BulletImpactEffect
     deleteOnCollide: false
     onlyCollideWhenShot: true
+    randomBlindChance: 0.05
     damage:
       types:
         Blunt: 1
