condense apothecary changelog

--- a/Resources/Changelog/Frontier.yml
+++ b/Resources/Changelog/Frontier.yml
@@ -7063,10 +7063,8 @@ Entries:
   time: '2024-09-22T12:42:28.0000000+00:00'
 - author: dustylens
   changes:
-    - type: Remove
-      message: Apothecary microwave
     - type: Tweak
-      message: The Apothecary has been reworked to use uranium power and directional fans.
+      message: The Apothecary's microwave has been removed, the ship now uses directional fans and uranium power.
   id: 5300
   time: '2024-09-23T18:21:26.0000000+00:00'
 - author: dustylens
