--- a/Resources/Maps/_NF/Shuttles/Scrap/bison.yml
+++ b/Resources/Maps/_NF/Shuttles/Scrap/bison.yml
@@ -8091,100 +8091,10 @@ entities:
       parent: 1
 - proto: DrinkCream
   entities:
-  - uid: 2386
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2387
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2388
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2389
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2390
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2391
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2392
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2393
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2394
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2395
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2396
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2397
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2398
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2399
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2400
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2401
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2402
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
-  - uid: 2403
-    components:
-    - type: Transform
-      pos: 7.299773,-16.90028
-      parent: 1
   - uid: 2404
     components:
     - type: Transform
-      pos: 7.299773,-16.90028
+      pos: 7.8069916,-16.635979
       parent: 1
 - proto: DrinkGlass
   entities:
@@ -8233,70 +8143,10 @@ entities:
       parent: 1
 - proto: DrinkMilkCarton
   entities:
-  - uid: 2326
+  - uid: 176
     components:
     - type: Transform
-      pos: 8.252898,-17.65028
-      parent: 1
-  - uid: 2327
-    components:
-    - type: Transform
-      pos: 8.252898,-17.65028
-      parent: 1
-  - uid: 2328
-    components:
-    - type: Transform
-      pos: 8.252898,-17.65028
-      parent: 1
-  - uid: 2329
-    components:
-    - type: Transform
-      pos: 8.252898,-17.65028
-      parent: 1
-  - uid: 2330
-    components:
-    - type: Transform
-      pos: 8.252898,-17.65028
-      parent: 1
-  - uid: 2331
-    components:
-    - type: Transform
-      pos: 8.252898,-17.65028
-      parent: 1
-  - uid: 2332
-    components:
-    - type: Transform
-      pos: 8.252898,-17.65028
-      parent: 1
-  - uid: 2333
-    components:
-    - type: Transform
-      pos: 8.252898,-17.65028
-      parent: 1
-  - uid: 2334
-    components:
-    - type: Transform
-      pos: 8.252898,-17.65028
-      parent: 1
-  - uid: 2335
-    components:
-    - type: Transform
-      pos: 8.252898,-17.65028
-      parent: 1
-  - uid: 2336
-    components:
-    - type: Transform
-      pos: 8.252898,-17.65028
-      parent: 1
-  - uid: 2337
-    components:
-    - type: Transform
-      pos: 8.252898,-17.65028
-      parent: 1
-  - uid: 2338
-    components:
-    - type: Transform
-      pos: 8.252898,-17.65028
+      pos: 7.8785286,-17.10357
       parent: 1
 - proto: EmergencyLight
   entities:
@@ -14305,182 +14155,17 @@ entities:
       parent: 1
 - proto: ReagentContainerFlour
   entities:
-  - uid: 176
+  - uid: 904
     components:
     - type: Transform
-      pos: 8.690398,-17.603405
-      parent: 1
-  - uid: 597
-    components:
-    - type: Transform
-      pos: 8.690398,-17.603405
-      parent: 1
-  - uid: 955
-    components:
-    - type: Transform
-      pos: 8.690398,-17.603405
-      parent: 1
-  - uid: 1609
-    components:
-    - type: Transform
-      pos: 8.690398,-17.603405
-      parent: 1
-  - uid: 1611
-    components:
-    - type: Transform
-      pos: 8.690398,-17.61903
-      parent: 1
-  - uid: 1688
-    components:
-    - type: Transform
-      pos: 8.690398,-17.603405
-      parent: 1
-  - uid: 1892
-    components:
-    - type: Transform
-      pos: 8.690398,-17.603405
-      parent: 1
-  - uid: 2281
-    components:
-    - type: Transform
-      pos: 8.690398,-17.61903
-      parent: 1
-  - uid: 2282
-    components:
-    - type: Transform
-      pos: 8.690398,-17.61903
-      parent: 1
-  - uid: 2289
-    components:
-    - type: Transform
-      pos: 8.690398,-17.603405
-      parent: 1
-  - uid: 2291
-    components:
-    - type: Transform
-      pos: 8.690398,-17.61903
-      parent: 1
-  - uid: 2292
-    components:
-    - type: Transform
-      pos: 8.690398,-17.61903
-      parent: 1
-  - uid: 2293
-    components:
-    - type: Transform
-      pos: 8.690398,-17.61903
-      parent: 1
-  - uid: 2294
-    components:
-    - type: Transform
-      pos: 8.690398,-17.61903
-      parent: 1
-  - uid: 2295
-    components:
-    - type: Transform
-      pos: 8.690398,-17.61903
-      parent: 1
-  - uid: 2296
-    components:
-    - type: Transform
-      pos: 8.690398,-17.61903
+      pos: 8.23501,-17.423016
       parent: 1
 - proto: ReagentContainerSugar
   entities:
-  - uid: 2359
+  - uid: 597
     components:
     - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2360
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2361
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2362
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2363
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2364
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2365
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2366
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2367
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2368
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2369
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2370
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2371
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2372
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2373
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2374
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2375
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2376
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
-      parent: 1
-  - uid: 2377
-    components:
-    - type: Transform
-      pos: 7.752898,-17.55653
+      pos: 8.86272,-17.085052
       parent: 1
 - proto: ReinforcedWindow
   entities:
