Pear fixes, pear flavor, pear ID consistency

--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meals.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meals.yml
@@ -277,7 +277,7 @@
     - Fruit
   
 - type: entity
-  name: poached pear
+  name: poached pears
   parent: FoodBowlBase
   id: FoodMealPoachedPears
   description: The classiest use for a can of wine.
@@ -305,13 +305,12 @@
           Quantity: 8
   - type: Tag
     tags:
-    - Vegetable
     - Fruit
 
 - type: entity
-  name: belle pear
+  name: pears belle helene
   parent: FoodBowlBase
-  id: FoodMealBellaPears
+  id: FoodMealPearsBelleHelene
   description: The delicate flavor of the immaculate pear drenched in chocolate.
   components:
   - type: FlavorProfile
@@ -339,14 +338,13 @@
           Quantity: 3
   - type: Tag
     tags:
-    - Vegetable
     - Fruit
 
 - type: entity
   name: pear muffin
   parent: FoodMealBase
-  id: FoodMealPearMuffin
-  description: I wont tell if you just try to pick out the chocolate.
+  id: FoodBakedMuffinPear
+  description: I won't tell if you just try to pick out the chocolate.
   components:
   - type: FlavorProfile
     flavors:
@@ -372,13 +370,12 @@
           Quantity: 1
   - type: Tag
     tags:
-    - Vegetable
     - Fruit
 
 - type: entity
   name: pear and cheese tart
   parent: FoodPieBase
-  id: FoodMealPearTart
+  id: FoodTartPearCheese
   description: The most sublime pair.
   components:
   - type: FlavorProfile
@@ -391,17 +388,6 @@
     layers:
     - state: tin
     - state: pearandcheese
-  - type: SolutionContainerManager
-    solutions:
-      food:
-        maxVol: 30
-        reagents:
-        - ReagentId: Nutriment
-          Quantity: 12
-        - ReagentId: Vitamin
-          Quantity: 8
-        - ReagentId: Flavorol
-          Quantity: 8
   - type: Tag
     tags:
     - Fruit
