--- a/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
@@ -151,7 +151,7 @@
 
 - type: microwaveMealRecipe
   id: RecipeRaisins
-  name: raisins
+  name: raisins recipe
   result: ReagentContainerRaisin # A little bit cursed, spawning a bag
   time: 30
   solids:
@@ -169,7 +169,7 @@
     
 - type: microwaveMealRecipe
   id: RecipePoachedPears
-  name: poached pears
+  name: poached pears recipe
   result: FoodMealPoachedPears
   time: 10
   solids:
@@ -180,9 +180,9 @@
     Wine: 10
     
 - type: microwaveMealRecipe
-  id: RecipeBellaPears
-  name: bella pears
-  result: FoodMealBellaPears
+  id: RecipePearsBelleHelene
+  name: pears belle helene recipe
+  result: FoodMealPearsBelleHelene
   time: 10
   solids:
     FoodBowlBig: 1
@@ -194,8 +194,8 @@
 
 - type: microwaveMealRecipe
   id: RecipePearMuffin
-  name: pear muffin
-  result: FoodMealPearMuffin
+  name: pear muffin recipe
+  result: FoodBakedMuffinPear
   time: 10
   solids:
     FoodPear: 1
@@ -207,15 +207,14 @@
     
 - type: microwaveMealRecipe
   id: RecipePearCheeseTart
-  name: pear and goat cheese tart
-  result: FoodMealPearTart
-  time: 10
+  name: pear and cheese tart recipe
+  result: FoodTartPearCheese
+  time: 15
   solids:
     FoodPlateTin: 1
     FoodDoughPie: 1
-    FoodPear: 3
+    FoodPear: 2
     FoodChevre: 1
-    FoodButter: 1
 
 # NOT ACTUAL FOOD
 
