--- a/Resources/Maps/_NF/Shuttles/Expedition/anchor.yml
+++ b/Resources/Maps/_NF/Shuttles/Expedition/anchor.yml
@@ -1632,38 +1632,49 @@ entities:
     - type: Transform
       pos: 9.5,-21.5
       parent: 1
-- proto: AtmosDeviceFanTiny
+- proto: AtmosDeviceFanDirectional
   entities:
   - uid: 57
     components:
     - type: Transform
-      pos: 20.5,-9.5
+      rot: 1.5707963267948966 rad
+      pos: 20.5,-11.5
       parent: 1
   - uid: 58
     components:
     - type: Transform
-      pos: -21.5,-11.5
+      rot: -1.5707963267948966 rad
+      pos: -21.5,-9.5
       parent: 1
   - uid: 59
     components:
     - type: Transform
-      pos: -1.5,-32.5
+      pos: 0.5,-32.5
       parent: 1
   - uid: 60
     components:
     - type: Transform
-      pos: -21.5,-9.5
+      rot: -1.5707963267948966 rad
+      pos: -21.5,-11.5
       parent: 1
   - uid: 61
     components:
     - type: Transform
-      pos: 0.5,-32.5
+      pos: -1.5,-32.5
       parent: 1
   - uid: 62
     components:
     - type: Transform
-      pos: 20.5,-11.5
+      rot: 1.5707963267948966 rad
+      pos: 20.5,-9.5
       parent: 1
+  - uid: 1261
+    components:
+    - type: Transform
+      pos: -17.5,-22.5
+      parent: 1
+- proto: AtmosDeviceFanTiny
+  entities:
   - uid: 638
     components:
     - type: Transform
@@ -9246,6 +9257,26 @@ entities:
     - type: Transform
       pos: -3.5,-25.5
       parent: 1
+- proto: NFSignDock
+  entities:
+  - uid: 74
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 20.5,-10.5
+      parent: 1
+  - uid: 554
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -21.5,-10.5
+      parent: 1
+  - uid: 770
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -0.5,-32.5
+      parent: 1
 - proto: NitrogenCanister
   entities:
   - uid: 487
@@ -10398,17 +10429,15 @@ entities:
       parent: 1
 - proto: SignAtmos
   entities:
-  - uid: 1195
-    components:
-    - type: Transform
-      pos: 4.5,-21.5
-      parent: 1
-- proto: SignAtmosMinsky
-  entities:
   - uid: 555
     components:
     - type: Transform
       pos: 7.5,-21.5
+      parent: 1
+  - uid: 1195
+    components:
+    - type: Transform
+      pos: 4.5,-21.5
       parent: 1
 - proto: SignBar
   entities:
@@ -10573,33 +10602,6 @@ entities:
     components:
     - type: Transform
       pos: 2.5,-11.5
-      parent: 1
-- proto: SignShield
-  entities:
-  - uid: 1261
-    components:
-    - type: Transform
-      pos: -2.5,-3.5
-      parent: 1
-- proto: NFSignDock
-  entities:
-  - uid: 74
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 20.5,-10.5
-      parent: 1
-  - uid: 554
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -21.5,-10.5
-      parent: 1
-  - uid: 770
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -0.5,-32.5
       parent: 1
 - proto: SignSurgery
   entities:
