--- a/Resources/Maps/_NF/Shuttles/Expedition/dartx.yml
+++ b/Resources/Maps/_NF/Shuttles/Expedition/dartx.yml
@@ -486,124 +486,103 @@ entities:
       version: 2
       data:
         tiles:
-          -1,-1:
-            0: 65535
-          -1,0:
-            0: 65535
-          -1,1:
-            0: 65535
           -3,-1:
-            0: 52428
+            0: 52416
           -3,-2:
             1: 34952
+          -2,-1:
+            0: 65532
           -2,-3:
             1: 12834
-            0: 52428
+            0: 34952
           -2,-2:
-            0: 65535
-          -2,-1:
-            0: 65535
+            0: 60968
           -2,-4:
             1: 8738
-            0: 52428
+            0: 34952
+          -2,0:
+            0: 12012
           -1,-4:
-            0: 65535
+            0: 65529
           -1,-3:
             0: 65535
           -1,-2:
-            0: 65535
+            0: 56777
+          -1,-1:
+            0: 65529
+          -1,0:
+            0: 52697
+          -1,-5:
+            0: 53009
+            1: 12
+          0,-4:
+            0: 61420
+          0,-3:
+            0: 61198
+          0,-2:
+            0: 56604
+          0,-1:
+            0: 65532
           -3,0:
-            0: 12
             1: 34944
           -3,1:
             1: 8
-          -2,0:
-            0: 65535
           -2,1:
-            0: 35023
             1: 1056
+            0: 8
+          -1,1:
+            0: 65529
           -2,2:
             1: 8
-          -1,2:
-            0: 15
-          0,-4:
-            0: 65535
-          0,-3:
-            0: 65535
-          0,-2:
-            0: 65535
-          0,-1:
-            0: 65535
-          1,-4:
-            0: 4369
-            1: 8738
-          1,-3:
-            0: 4369
-            1: 25122
+          0,0:
+            0: 7644
+          0,1:
+            0: 30588
+          0,-5:
+            0: 8140
+            1: 1
           1,-2:
-            0: 30583
+            0: 13088
             1: 34952
           1,-1:
-            0: 65535
-          2,-1:
-            0: 4369
-          0,0:
-            0: 65535
-          0,1:
-            0: 65535
-          0,2:
-            0: 7
-            1: 8
+            0: 65521
+          1,-4:
+            1: 8738
+          1,-3:
+            1: 25122
           1,0:
-            0: 30591
+            0: 9009
             1: 34944
+          2,-1:
+            0: 4368
+          0,2:
+            1: 8
           1,1:
-            0: 23
             1: 296
-          2,0:
-            0: 1
-          -3,-7:
-            0: 49152
           -3,-6:
-            0: 52428
+            0: 2056
           -3,-5:
             1: 132
-            0: 8
-          -2,-7:
-            0: 61440
           -2,-6:
-            0: 65535
+            0: 53239
           -2,-5:
-            0: 61439
+            0: 3310
             1: 4096
           -1,-7:
             1: 4096
           -1,-6:
-            0: 13073
+            0: 4096
             1: 17440
-          -1,-5:
-            0: 65523
-            1: 12
           0,-6:
             1: 4384
-            0: 61132
-          0,-5:
-            1: 1
-            0: 65534
+            0: 51328
           0,-7:
             1: 16384
-            0: 32768
-          1,-7:
-            0: 61440
           1,-6:
-            0: 65535
+            0: 32767
           1,-5:
-            0: 14207
+            0: 307
             1: 16512
-          2,-7:
-            0: 4096
-          2,-6:
-            0: 4369
           2,-5:
             1: 1
         uniqueMixes:
@@ -623,7 +602,7 @@ entities:
           - 0
           - 0
         - volume: 2500
-          temperature: 293.15
+          immutable: True
           moles:
           - 0
           - 0
@@ -658,8 +637,6 @@ entities:
       - 689
       - 302
       - 475
-    - type: AtmosDevice
-      joinedGrid: 1
   - uid: 1004
     components:
     - type: Transform
@@ -677,8 +654,6 @@ entities:
       - 286
       - 486
       - 242
-    - type: AtmosDevice
-      joinedGrid: 1
   - uid: 1005
     components:
     - type: Transform
@@ -697,8 +672,6 @@ entities:
       - 266
       - 790
       - 957
-    - type: AtmosDevice
-      joinedGrid: 1
 - proto: AirCanister
   entities:
   - uid: 45
@@ -709,8 +682,6 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-    - type: AtmosDevice
-      joinedGrid: 1
   - uid: 126
     components:
     - type: Transform
@@ -719,8 +690,6 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-    - type: AtmosDevice
-      joinedGrid: 1
 - proto: Airlock
   entities:
   - uid: 765
@@ -864,6 +833,10 @@ entities:
           showEnts: False
           occludes: True
           ent: 141
+        fuelSlot: !type:ContainerSlot
+          showEnts: False
+          occludes: True
+          ent: null
 - proto: AmeJar
   entities:
   - uid: 141
@@ -872,11 +845,6 @@ entities:
       parent: 253
     - type: Physics
       canCollide: False
-  - uid: 337
-    components:
-    - type: Transform
-      pos: 6.564746,-20.383572
-      parent: 1
 - proto: AmeShielding
   entities:
   - uid: 243
@@ -977,37 +945,43 @@ entities:
     - type: Transform
       pos: 2.2333908,-18.29379
       parent: 1
-- proto: AtmosDeviceFanTiny
+- proto: AtmosDeviceFanDirectional
   entities:
-  - uid: 808
+  - uid: 337
     components:
     - type: Transform
-      pos: -9.5,-0.5
-      parent: 1
-  - uid: 809
-    components:
-    - type: Transform
-      pos: -9.5,-1.5
-      parent: 1
-  - uid: 810
-    components:
-    - type: Transform
+      rot: -1.5707963267948966 rad
       pos: -9.5,-2.5
       parent: 1
-  - uid: 811
+  - uid: 632
     components:
     - type: Transform
-      pos: 8.5,-0.5
+      rot: -1.5707963267948966 rad
+      pos: -9.5,-1.5
       parent: 1
-  - uid: 812
+  - uid: 633
     components:
     - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -9.5,-0.5
+      parent: 1
+  - uid: 634
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 8.5,-2.5
+      parent: 1
+  - uid: 635
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
       pos: 8.5,-1.5
       parent: 1
-  - uid: 813
+  - uid: 751
     components:
     - type: Transform
-      pos: 8.5,-2.5
+      rot: 1.5707963267948966 rad
+      pos: 8.5,-0.5
       parent: 1
 - proto: AtmosFixBlockerMarker
   entities:
@@ -1306,6 +1280,11 @@ entities:
       parent: 1
 - proto: Bed
   entities:
+  - uid: 71
+    components:
+    - type: Transform
+      pos: -4.5,2.5
+      parent: 1
   - uid: 817
     components:
     - type: Transform
@@ -1342,8 +1321,6 @@ entities:
     - type: Transform
       pos: -4.5,2.5
       parent: 1
-- proto: BedsheetSpawner
-  entities:
   - uid: 827
     components:
     - type: Transform
@@ -2493,13 +2470,6 @@ entities:
     - type: Transform
       pos: 0.5,-16.5
       parent: 1
-- proto: MachineFrame
-  entities:
-  - uid: 261
-    components:
-    - type: Transform
-      pos: -3.5,-4.5
-      parent: 1
 - proto: CigarGoldCase
   entities:
   - uid: 797
@@ -3125,9 +3095,9 @@ entities:
     - type: Transform
       pos: -3.358872,-18.372757
       parent: 1
-- proto: GasMixer
+- proto: GasMixerOn
   entities:
-  - uid: 751
+  - uid: 773
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
@@ -3136,8 +3106,6 @@ entities:
     - type: GasMixer
       inletTwoConcentration: 0.79
       inletOneConcentration: 0.21
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
 - proto: GasPassiveVent
@@ -3148,8 +3116,6 @@ entities:
       rot: -1.5707963267948966 rad
       pos: -0.5,-19.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
 - proto: GasPipeBend
@@ -3980,6 +3946,13 @@ entities:
       parent: 1
     - type: AtmosPipeColor
       color: '#990000FF'
+  - uid: 777
+    components:
+    - type: Transform
+      pos: -4.5,-20.5
+      parent: 1
+    - type: AtmosPipeColor
+      color: '#0055CCFF'
   - uid: 825
     components:
     - type: Transform
@@ -4169,8 +4142,6 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 5.5,1.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 146
@@ -4179,8 +4150,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 2.5,0.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 151
@@ -4189,8 +4158,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 2.5,1.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 360
@@ -4199,8 +4166,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 2.5,2.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 367
@@ -4209,8 +4174,6 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 5.5,2.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 368
@@ -4219,8 +4182,6 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 5.5,3.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 724
@@ -4229,32 +4190,24 @@ entities:
       rot: 3.141592653589793 rad
       pos: -6.5,-23.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
   - uid: 748
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: -8.5,-23.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
   - uid: 749
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: -8.5,-21.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
   - uid: 757
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -5.5,-23.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
 - proto: GasPressurePump
   entities:
   - uid: 325
@@ -4265,8 +4218,6 @@ entities:
       parent: 1
     - type: GasPressurePump
       targetPressure: 4500
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 326
@@ -4274,8 +4225,6 @@ entities:
     - type: Transform
       pos: 4.5,-0.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 474
@@ -4284,20 +4233,8 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -4.5,-19.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
-  - uid: 777
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -4.5,-20.5
-      parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
-    - type: AtmosPipeColor
-      color: '#0055CCFF'
 - proto: GasVentPump
   entities:
   - uid: 239
@@ -4309,8 +4246,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1004
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 242
@@ -4322,8 +4257,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1004
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 266
@@ -4335,8 +4268,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1005
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 276
@@ -4347,8 +4278,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1005
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 284
@@ -4360,8 +4289,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1004
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 285
@@ -4373,8 +4300,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1004
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 286
@@ -4386,8 +4311,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1004
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 301
@@ -4399,8 +4322,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1003
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 302
@@ -4412,8 +4333,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1003
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 790
@@ -4425,8 +4344,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1005
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 957
@@ -4437,8 +4354,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1005
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
 - proto: GasVentScrubber
@@ -4452,8 +4367,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1005
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 309
@@ -4465,8 +4378,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1005
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 459
@@ -4478,8 +4389,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1005
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 464
@@ -4491,8 +4400,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1004
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 475
@@ -4504,8 +4411,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1003
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 484
@@ -4517,8 +4422,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1004
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 486
@@ -4530,8 +4433,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1004
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 497
@@ -4543,8 +4444,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1005
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 613
@@ -4556,8 +4455,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1005
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 689
@@ -4569,8 +4466,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1003
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 691
@@ -4582,8 +4477,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1004
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 711
@@ -4595,8 +4488,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1004
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 723
@@ -4608,8 +4499,6 @@ entities:
     - type: DeviceNetwork
       deviceLists:
       - 1005
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#990000FF'
 - proto: GasVolumePump
@@ -4620,8 +4509,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: -5.5,-22.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 750
@@ -4630,8 +4517,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: -6.5,-22.5
       parent: 1
-    - type: AtmosDevice
-      joinedGrid: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
 - proto: GravityGeneratorMini
@@ -5068,12 +4953,43 @@ entities:
         - 0
         - 0
         - 0
+- proto: LockerWallMaterialsFuelAmeJarFilled
+  entities:
+  - uid: 238
+    components:
+    - type: Transform
+      pos: 6.5,-19.5
+      parent: 1
+- proto: LockerWallMedical
+  entities:
+  - uid: 138
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -6.5,-3.5
+      parent: 1
+  - uid: 139
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -6.5,0.5
+      parent: 1
 - proto: MachineFrame
   entities:
+  - uid: 261
+    components:
+    - type: Transform
+      pos: -3.5,-4.5
+      parent: 1
   - uid: 444
     components:
     - type: Transform
       pos: 5.5,-19.5
+      parent: 1
+  - uid: 638
+    components:
+    - type: Transform
+      pos: -3.5,-5.5
       parent: 1
   - uid: 753
     components:
@@ -5096,13 +5012,6 @@ entities:
     - type: Physics
       canCollide: False
     - type: InsideEntityStorage
-- proto: Bed
-  entities:
-  - uid: 71
-    components:
-    - type: Transform
-      pos: -4.5,2.5
-      parent: 1
 - proto: Mirror
   entities:
   - uid: 233
@@ -5120,8 +5029,6 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-    - type: AtmosDevice
-      joinedGrid: 1
 - proto: OxygenCanister
   entities:
   - uid: 789
@@ -5132,8 +5039,6 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
-    - type: AtmosDevice
-      joinedGrid: 1
 - proto: PaperBin10
   entities:
   - uid: 472
@@ -5639,7 +5544,7 @@ entities:
     - type: Transform
       pos: 2.2868097,-18.426098
       parent: 1
-- proto: soda_dispenser
+- proto: SodaDispenser
   entities:
   - uid: 630
     components:
@@ -6093,13 +5998,6 @@ entities:
     - type: Transform
       pos: -4.5,-10.5
       parent: 1
-- proto: MachineFrame
-  entities:
-  - uid: 638
-    components:
-    - type: Transform
-      pos: -3.5,-5.5
-      parent: 1
 - proto: VendingMachineEngiDrobe
   entities:
   - uid: 755
@@ -6139,20 +6037,6 @@ entities:
     components:
     - type: Transform
       pos: 0.5,-5.5
-      parent: 1
-- proto: LockerWallMedical
-  entities:
-  - uid: 138
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -6.5,-3.5
-      parent: 1
-  - uid: 139
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -6.5,0.5
       parent: 1
 - proto: VendingMachineWinter
   entities:
