--- a/Resources/Prototypes/_NF/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Fun/toys.yml
@@ -514,8 +514,8 @@
 - type: entity
   parent: [BaseC3SyndicateContrabandNoValue, RevolverCapGunFake] # Frontier: added BaseC3SyndicateContraband
   id: RevolverCapGunFakeGrown
+  categories: [ HideSpawnMenu ]
   suffix: Fake, Grown
-  noSpawn: true
   components:
   - type: RevolverAmmoProvider
     proto: CartridgeMagnum # Base has AP rounds
