--- a/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
@@ -171,3 +171,11 @@
     location: Edison Power Plant
 
 # Events
+- type: entity
+  id: WarpPointNFCave
+  parent: WarpPoint
+  suffix: Event, Cave
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: Cave
