--- a/Resources/Prototypes/_NF/Entities/Structures/Storage/Crates/crates.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Storage/Crates/crates.yml
@@ -314,3 +314,21 @@
     sprite: _NF/Structures/Storage/Crates/secure_firearms.rsi
   - type: Sprite
     sprite: _NF/Structures/Storage/Crates/secure_firearms.rsi
+
+- type: entity
+  parent: CrateLivestock
+  id: CrateWoodCage
+  name: wooden cage
+  description: Looks like somebody made this in a cave, with a box of scraps.
+  components:
+  - type: EntityStorage
+    airtight: false # Keep this explicit in case the parent changes.
+  - type: Sprite
+    sprite: _NF/Structures/Storage/Crates/woodcage.rsi
+    layers:
+    - state: base
+    - state: closed
+      map: ["enum.StorageVisualLayers.Door"]
+  - type: Icon
+    sprite: _NF/Structures/Storage/Crates/woodcage.rsi
+    state: base
