--- a/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
@@ -154,7 +154,7 @@
   description: An overwhelming amount of ancient patriotism washes over you just by looking at the machine.
   components:
   - type: VendingMachine
-    pack: AmmoVendInventory
+    pack: WeaponryWorksVendInventory # Frontier AmmoVendInventory<WeaponryWorksVendInventory
     offState: off
     brokenState: broken
     normalState: normal-unshaded
@@ -174,7 +174,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: MarketModifier # Frontier
-    mod: 11.132 # Frontier
+    mod: 12 # Frontier
 
 - type: entity
   parent: VendingMachine
@@ -827,8 +827,6 @@
     radius: 1.5
     energy: 1.6
     color: "#b89e2a"
-  - type: MarketModifier # Frontier
-    mod: 10 # Frontier
 
 - type: entity
   parent: VendingMachine
@@ -1166,8 +1164,6 @@
     radius: 1.5
     energy: 1.6
     color: "#389690"
-  - type: MarketModifier # Frontier
-    mod: 9.64 # Frontier
 
 - type: entity
   parent: VendingMachine
@@ -1399,8 +1395,6 @@
     color: "#b89f25"
   # - type: AccessReader # Frontier
   #   access: [["Salvage"]] # Frontier
-  - type: MarketModifier # Frontier
-    mod: 10 # Frontier
   # - type: GuideHelp # Frontier: removed guidebook entry
   #   guides: # Frontier: removed guidebook entry
   #   - Salvage # Frontier: removed guidebook entry
