--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/vending_machines.yml
@@ -321,8 +321,6 @@
     radius: 1.5
     energy: 1.6
     color: "#4b93ad"
-  - type: MarketModifier
-    mod: 10
 #Interface
   - type: UserInterface
     interfaces:
@@ -374,8 +372,6 @@
     softness: 0.9
     offset: "0, -0.6"
     color: "#EEEEFF"
-  - type: MarketModifier
-    mod: 10
 
 - type: entity
   parent: [BaseStructureDisableAnchoring, VendingMachine]
@@ -693,7 +689,7 @@
   suffix: POI
   components:
   - type: VendingMachine
-    pack: AmmoVendPOIInventory
+    pack: WeaponryWorksVendPOIInventory
 
 - type: entity
   parent: VendingMachineEngivend
