--- a/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/brigmedic.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/brigmedic.yml
@@ -19,6 +19,8 @@
   weight: 125
   displayWeight: 35
   canBeAntag: false
+  access:
+  - Medical
   accessGroups:
   - GeneralNfsdAccess
   special:
