Больше шаттлов, вырезка медицины и многое другое

--- a/Resources/Prototypes/Corvax/Entities/Structures/Shuttles/cannons.yml
+++ b/Resources/Prototypes/Corvax/Entities/Structures/Shuttles/cannons.yml
@@ -5,7 +5,7 @@
   name: PTK-800 "Дематериализатор материи"
   description: Стационарная добывающая турель утилизаторов. Самостоятельно накапливает заряды, чрезвычайно эффективна при раскопке астероидов.
   suffix: НЕСКРУЧИВАЕМЫЙ
-  Components:
+  components:
   - type: Destructible
     thresholds:
     - trigger:
@@ -21,7 +21,7 @@
   name: пушка пиратского корабля
   description: КАБУМ!
   suffix: НЕСКРУЧИВАЕМЫЙ
-  Components:
+  components:
   - type: Destructible
     thresholds:
     - trigger:
@@ -37,7 +37,7 @@
   name: EXP-2100g "Дастер"
   description: Мощный стационарный гранатомёт. Для стрельбы необходим картридж.
   suffix: НЕСКРУЧИВАЕМЫЙ
-  Components:
+  components:
   - type: Destructible
     thresholds:
     - trigger:
@@ -53,7 +53,7 @@
   name: EXP-320g "Дружба"
   description: Небольшой стационарный гранатомёт, вмещающий 2 гранаты.
   suffix: НЕСКРУЧИВАЕМЫЙ
-  Components:
+  components:
   - type: Destructible
     thresholds:
     - trigger:
@@ -69,7 +69,7 @@
   name: LSE-1200c "Перфоратор"
   description: Продвинутая стационарная лазерная установка. Уничтожает электроприборы и чрезвычайно опасна для здоровья! Для стрельбы использует энергоячейки.
   suffix: НЕСКРУЧИВАЕМЫЙ
-  Components:
+  components:
   - type: Destructible
     thresholds:
     - trigger:
@@ -85,7 +85,7 @@
   name: LSE-400c "Пулемёт Свалинн"
   description: Базовая стационарная лазерная установка. Эффективна против живой силы и электроприборов. Для стрельбы использует обычые батареи и обладает чрезвычайно высокой скорострельностью.
   suffix: НЕСКРУЧИВАЕМЫЙ
-  Components:
+  components:
   - type: Destructible
     thresholds:
     - trigger:
