--- a/Resources/Prototypes/Corvax/Shipyard/pill.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/pill.yml
@@ -2,7 +2,7 @@
   id: pill
   name: NMS Таблетка
   description: Малогабаритный медицинский шаттл. Рекомендованный состав команды 1-2 человек.
-  price: 22500
+  price: 17500 #меньше не поставлю, ибо нефиг
   category: Small
   group: Civilian
   shuttlePath: /Maps/Corvax/Shuttles/pill.yml
