--- a/Resources/Maps/_NF/Shuttles/Expedition/gasbender.yml
+++ b/Resources/Maps/_NF/Shuttles/Expedition/gasbender.yml
@@ -104,7 +104,6 @@ entities:
             216: 5,-11
             217: -6,6
             218: -5,6
-            219: 6,-9
             220: 6,-10
             294: -1,5
             295: -1,6
@@ -399,6 +398,7 @@ entities:
             363: -3,1
             364: -3,4
             367: -6,-2
+            372: 6,-9
         - node:
             color: '#3EB38896'
             id: FullTileOverlayGreyscale
@@ -1401,11 +1401,11 @@ entities:
       parent: 1
 - proto: APCConstructed
   entities:
-  - uid: 566
+  - uid: 748
     components:
     - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 7.5,-8.5
+      rot: 3.141592653589793 rad
+      pos: 5.5,-11.5
       parent: 1
 - proto: AtmosDeviceFanDirectional
   entities:
@@ -2034,13 +2034,6 @@ entities:
     - type: Transform
       pos: -2.4127467,2.9053578
       parent: 1
-- proto: BoxDarts
-  entities:
-  - uid: 224
-    components:
-    - type: Transform
-      pos: 3.4302099,9.316309
-      parent: 1
 - proto: ButtonFrameCaution
   entities:
   - uid: 164
@@ -2103,11 +2096,6 @@ entities:
     - type: Transform
       pos: -4.5,6.5
       parent: 1
-  - uid: 150
-    components:
-    - type: Transform
-      pos: 5.5,-8.5
-      parent: 1
   - uid: 161
     components:
     - type: Transform
@@ -2122,6 +2110,11 @@ entities:
     components:
     - type: Transform
       pos: 8.5,-2.5
+      parent: 1
+  - uid: 223
+    components:
+    - type: Transform
+      pos: 5.5,-11.5
       parent: 1
   - uid: 227
     components:
@@ -2708,11 +2701,6 @@ entities:
     - type: Transform
       pos: 0.5,11.5
       parent: 1
-  - uid: 779
-    components:
-    - type: Transform
-      pos: 7.5,-8.5
-      parent: 1
   - uid: 785
     components:
     - type: Transform
@@ -2727,11 +2715,6 @@ entities:
     components:
     - type: Transform
       pos: 4.5,-11.5
-      parent: 1
-  - uid: 933
-    components:
-    - type: Transform
-      pos: 6.5,-8.5
       parent: 1
 - proto: CableHV
   entities:
@@ -2782,20 +2765,25 @@ entities:
       parent: 1
 - proto: CableMV
   entities:
+  - uid: 150
+    components:
+    - type: Transform
+      pos: 4.5,-11.5
+      parent: 1
+  - uid: 224
+    components:
+    - type: Transform
+      pos: 4.5,-9.5
+      parent: 1
   - uid: 238
     components:
     - type: Transform
-      pos: 6.5,-8.5
+      pos: 5.5,-11.5
       parent: 1
   - uid: 298
     components:
     - type: Transform
       pos: 1.5,-8.5
-      parent: 1
-  - uid: 314
-    components:
-    - type: Transform
-      pos: 7.5,-8.5
       parent: 1
   - uid: 329
     components:
@@ -2811,6 +2799,11 @@ entities:
     components:
     - type: Transform
       pos: 3.5,-8.5
+      parent: 1
+  - uid: 377
+    components:
+    - type: Transform
+      pos: 4.5,-10.5
       parent: 1
   - uid: 541
     components:
@@ -3046,11 +3039,6 @@ entities:
     components:
     - type: Transform
       pos: -0.5,-3.5
-      parent: 1
-  - uid: 748
-    components:
-    - type: Transform
-      pos: 5.5,-8.5
       parent: 1
   - uid: 841
     components:
@@ -3719,11 +3707,10 @@ entities:
       parent: 1
 - proto: DefibrillatorCabinetFilled
   entities:
-  - uid: 1147
+  - uid: 779
     components:
     - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 1.5,15.5
+      pos: -0.5,12.5
       parent: 1
 - proto: DisposalBend
   entities:
@@ -3883,17 +3870,6 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: -6.5,-2.5
-      parent: 1
-  - uid: 1006
-    components:
-    - type: Transform
-      pos: 3.5,7.5
-      parent: 1
-  - uid: 1008
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -4.5,7.5
       parent: 1
   - uid: 1064
     components:
@@ -5540,6 +5516,13 @@ entities:
       parent: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
+- proto: GravityGeneratorMini
+  entities:
+  - uid: 314
+    components:
+    - type: Transform
+      pos: 6.5,-8.5
+      parent: 1
 - proto: Grille
   entities:
   - uid: 9
@@ -6033,10 +6016,10 @@ entities:
       parent: 1
 - proto: PortableScrubber
   entities:
-  - uid: 377
+  - uid: 392
     components:
     - type: Transform
-      pos: 6.5,-8.5
+      pos: 2.5,-4.5
       parent: 1
 - proto: PottedPlantRandom
   entities:
@@ -6780,10 +6763,10 @@ entities:
       parent: 1
 - proto: SignElectricalMed
   entities:
-  - uid: 783
+  - uid: 566
     components:
     - type: Transform
-      pos: 5.5,-11.5
+      pos: 4.5,-12.5
       parent: 1
 - proto: SignEngine
   entities:
@@ -7002,14 +6985,6 @@ entities:
     components:
     - type: Transform
       pos: -0.5,15.5
-      parent: 1
-- proto: TargetDarts
-  entities:
-  - uid: 223
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -1.5,11.5
       parent: 1
 - proto: TelecomServerFilledCommon
   entities:
