Revert most material value rework

--- a/Resources/Prototypes/Entities/Clothing/Masks/masks.yml
+++ b/Resources/Prototypes/Entities/Clothing/Masks/masks.yml
@@ -181,7 +181,7 @@
       Steel: 50
       Plastic: 100
   - type: StaticPrice
-    price: 30 # increases in price after decomposed into raw materials
+    price: 12.5 # increases in price after decomposed into raw materials # Frontier: 30<12.5 - TODO: material value rework
 
 - type: entity
   parent: ClothingMaskBase
