--- a/Resources/Prototypes/Entities/Structures/Storage/Canisters/gas_canisters.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Canisters/gas_canisters.yml
@@ -770,7 +770,7 @@
       materialComposition:
         Steel: 500
     - type: StaticPrice
-      price: 125
+      price: 60 # Frontier: 125<60 - TODO: material value rework
 
 - type: entity
   parent: GasCanisterBrokenBase
