--- a/Resources/Prototypes/Entities/Structures/Windows/uranium.yml
+++ b/Resources/Prototypes/Entities/Structures/Windows/uranium.yml
@@ -47,7 +47,7 @@
     damageOverlay:
       sprite: Structures/Windows/cracks.rsi
   - type: StaticPrice
-    price: 200
+    price: 80 # Frontier: 200<80 - TODO: material value rework
   - type: RadiationBlocker
     resistance: 3
 
@@ -100,7 +100,7 @@
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
   - type: StaticPrice
-    price: 100
+    price: 40 # Frontier: 100<40 - TODO: material value rework
   - type: RadiationBlocker
     resistance: 1.5
 
