--- a/Resources/Prototypes/Entities/Structures/Windows/window.yml
+++ b/Resources/Prototypes/Entities/Structures/Windows/window.yml
@@ -110,7 +110,7 @@
     node: tintedWindow
   - type: Occluder
   - type: StaticPrice
-    price: 35 # Frontier: 70<35
+    price: 35 # Frontier: 70<35 - TODO: material rebalance
 
 - type: entity
   id: WindowRCDResistant
