--- a/Resources/Prototypes/Reagents/Materials/metals.yml
+++ b/Resources/Prototypes/Reagents/Materials/metals.yml
@@ -12,7 +12,7 @@
   unit: materials-unit-bar
   icon: { sprite: Objects/Materials/ingots.rsi, state: gold }
   color: "#FFD700"
-  price: 0.75 # $75 for 1 unit # FRONTIER MERGE: theirs increased
+  price: 0.2 # $75 for 1 unit # Frontier: 0.75<0.2 - TODO: material rework
 
 - type: material
   id: Silver
@@ -21,7 +21,7 @@
   unit: materials-unit-bar
   icon: { sprite: Objects/Materials/ingots.rsi, state: silver }
   color: "#C0C0C0"
-  price: 0.60 # $60 for 1 unit # FRONTIER MERGE: theirs increased
+  price: 0.15 # $60 for 1 unit # Frontier: 0.6<0.15 - TODO: material rework
 
 - type: material
   id: Brass
@@ -29,7 +29,7 @@
   name: materials-brass
   icon: { sprite: Objects/Materials/Sheets/metal.rsi, state: brass }
   color: "#b18b25"
-  price: 0.30 # $30 for 1 unit # FRONTIER MERGE: theirs increased
+  price: 0.1 # $30 for 1 unit # Frontier: 0.30<0.1 - TODO: material rework
 
 - type: material
   id: Plasteel
