--- a/Resources/Prototypes/Entities/Clothing/Masks/base_clothingmask.yml
+++ b/Resources/Prototypes/Entities/Clothing/Masks/base_clothingmask.yml
@@ -9,8 +9,8 @@
     size: Small
   - type: Clothing
     slots: [mask]
-  - type: StaticPrice
-    price: 25
+  # - type: StaticPrice # Frontier: TODO - material value rework
+  #   price: 25 # Frontier
 
 - type: entity
   abstract: true
