--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/clockwork.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/clockwork.yml
@@ -23,5 +23,5 @@
     node: glassAirlock
     containers:
     - board
-  - type: StaticPrice
-    price: 165
+  # - type: StaticPrice # Frontier - TODO: material value rework
+  #   price: 165 # Frontier
