--- a/Resources/Prototypes/Entities/Structures/Doors/Windoors/base_structurewindoors.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Windoors/base_structurewindoors.yml
@@ -147,7 +147,7 @@
     containers:
     - board
   - type: StaticPrice
-    price: 150
+    price: 100 # Frontier: 150<100 - TODO: material value rework
   - type: PryUnpowered
 
 - type: entity
@@ -203,7 +203,7 @@
     graph: Windoor
     node: windoorSecure
   - type: StaticPrice
-    price: 350
+    price: 200 # Frontier: 350<200 - TODO: material value rework
   - type: Tag
     tags:
       - SecureWindoor
@@ -261,7 +261,7 @@
     graph: Windoor
     node: pwindoor
   - type: StaticPrice
-    price: 500
+    price: 170 # Frontier: 500<170 - TODO: material value rework
   - type: RadiationBlocker
     resistance: 2
 
@@ -316,7 +316,7 @@
     graph: Windoor
     node: pwindoorSecure
   - type: StaticPrice
-    price: 500
+    price: 312 # Frontier: 500<312 - material value rework
   - type: RadiationBlocker
     resistance: 4
   - type: Tag
@@ -376,7 +376,7 @@
     graph: Windoor
     node: uwindoor
   - type: StaticPrice
-    price: 560
+    price: 180 # Frontier: 560<180 - TODO: material value rework
   - type: RadiationBlocker
     resistance: 3
 
@@ -431,7 +431,7 @@
     graph: Windoor
     node: uwindoorSecure
   - type: StaticPrice
-    price: 750
+    price: 462 # Frontier: 750<462 - TODO: material value rework
   - type: RadiationBlocker
     resistance: 5
   - type: Tag
