--- a/Resources/Prototypes/Entities/Structures/Doors/Windoors/clockwork.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Windoors/clockwork.yml
@@ -32,5 +32,5 @@
     node: windoorClockwork
     containers:
     - board
-  - type: StaticPrice
-    price: 240
+  # - type: StaticPrice # Frontier - TODO: material value rework
+  #   price: 240 # Frontier
