--- a/Resources/Prototypes/Entities/Structures/Furniture/bench.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/bench.yml
@@ -16,7 +16,7 @@
   - type: Physics
     bodyType: Static
   - type: StaticPrice
-    price: 35
+    price: 15 # Frontier: 35<15 - TODO: material value rework
 
 - type: entity
   id: BenchColorfulComfy
