--- a/Resources/Prototypes/Entities/Structures/Furniture/toilet.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/toilet.yml
@@ -74,7 +74,7 @@
   - type: Drain
     autoDrain: false
   - type: StaticPrice
-    price: 100
+    price: 25 # Frontier: 100<25 - TODO: material value rework
   - type: UserInterface
     interfaces:
       enum.DisposalUnitUiKey.Key:
