--- a/Resources/Prototypes/Entities/Structures/Lighting/ground_lighting.yml
+++ b/Resources/Prototypes/Entities/Structures/Lighting/ground_lighting.yml
@@ -63,7 +63,7 @@
         sound:
           collection: MetalGlassBreak
   - type: StaticPrice
-    price: 75
+    price: 25 # Frontier: 75<25 - TODO: material value rework
 
 - type: entity
   id: PoweredLightPostSmallEmpty
