--- a/Resources/Prototypes/Entities/Structures/Piping/Disposal/pipes.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Disposal/pipes.yml
@@ -57,7 +57,7 @@
     containers:
       DisposalTube: !type:Container
   - type: StaticPrice
-    price: 30
+    price: 22 # Frontier: 30<22 - TODO: material value rework
 
 - type: entity
   id: DisposalHolder
