--- a/Resources/Prototypes/Entities/Structures/Storage/Closets/base_structureclosets.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Closets/base_structureclosets.yml
@@ -92,7 +92,7 @@
     stateDoorOpen: generic_open
     stateDoorClosed: generic_door
   - type: StaticPrice
-    price: 75
+    price: 50 # Frontier: 75<50 - TODO: material value rework
 
 # steel closet base (that can be constructed/deconstructed)
 - type: entity
@@ -121,7 +121,7 @@
   - type: WallMount
     arc: 175
   - type: StaticPrice
-    price: 75
+    price: 50 # Frontier: 75<50 - TODO: material value rework
   - type: Transform
     noRot: false
   - type: Sprite
