--- a/Resources/Prototypes/Entities/Structures/Storage/Crates/base_structurecrates.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Crates/base_structurecrates.yml
@@ -86,7 +86,7 @@
       paper_label: !type:ContainerSlot
   - type: ItemSlots
   - type: StaticPrice
-    price: 75
+    price: 50 # Frontier: 75<50 - TODO: material value rework
   - type: Construction
     graph: CrateGenericSteel
     node: crategenericsteel
