--- a/Resources/Prototypes/Entities/Structures/Storage/Crates/crates.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Crates/crates.yml
@@ -28,7 +28,7 @@
     containers:
     - entity_storage
   - type: StaticPrice
-    price: 100
+    price: 80 # Frontier: 100<80 - TODO: material value rework
 
 - type: entity
   parent: CratePlastic
@@ -417,7 +417,7 @@
         layer:
         - LargeMobLayer
   - type: StaticPrice
-    price: 75
+    price: 60 # Frontier: 75<60 - TODO: material value rework
 
 - type: entity
   parent: CrateGeneric
