--- a/Resources/Prototypes/Entities/Structures/Windows/plastitanium.yml
+++ b/Resources/Prototypes/Entities/Structures/Windows/plastitanium.yml
@@ -31,8 +31,8 @@
     interactSuccessSound:
       path: /Audio/Effects/glass_knock.ogg
   - type: Appearance
-  - type: StaticPrice
-    price: 100
+  # - type: StaticPrice # Frontier
+  #   price: 100 # Frontier
   - type: BlockWeather
 
 - type: entity
