--- a/Resources/Prototypes/Entities/Structures/Windows/ruranium.yml
+++ b/Resources/Prototypes/Entities/Structures/Windows/ruranium.yml
@@ -49,7 +49,7 @@
     damageOverlay:
       sprite: Structures/Windows/cracks.rsi
   - type: StaticPrice
-    price: 215
+    price: 140 # Frontier: 215<140 - TODO: material value rework
   - type: RadiationBlocker
     resistance: 5
 
@@ -105,7 +105,7 @@
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
   - type: StaticPrice
-    price: 110
+    price: 70 # Frontier: 110<70 - TODO: material value rework
   - type: RadiationBlocker
     resistance: 2.5
 
