--- a/Resources/Maps/_NF/Shuttles/lantern.yml
+++ b/Resources/Maps/_NF/Shuttles/lantern.yml
@@ -1415,6 +1415,16 @@ entities:
     - type: Transform
       pos: 3.5,-4.5
       parent: 1
+  - uid: 689
+    components:
+    - type: Transform
+      pos: -1.5,4.5
+      parent: 1
+  - uid: 690
+    components:
+    - type: Transform
+      pos: -2.5,4.5
+      parent: 1
   - uid: 691
     components:
     - type: Transform
