--- a/Resources/Maps/_NF/Shuttles/legman.yml
+++ b/Resources/Maps/_NF/Shuttles/legman.yml
@@ -144,6 +144,7 @@ entities:
             id: StandClear
           decals:
             8: -1,-4
+            34: 1,-4
         - node:
             color: '#639137FF'
             id: ThreeQuarterTileOverlayGreyscale
@@ -254,20 +255,6 @@ entities:
     - type: RadiationGridResistance
     - type: BecomesStation
       id: legman
-- proto: AirAlarm
-  entities:
-  - uid: 93
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 3.5,-2.5
-      parent: 1
-    - type: DeviceList
-      devices:
-      - 62
-      - 107
-      - 79
-      - 20
 - proto: AirlockGlassShuttle
   entities:
   - uid: 4
@@ -592,30 +579,12 @@ entities:
     - type: ItemSlots
 - proto: DefibrillatorCabinetFilled
   entities:
-  - uid: 145
+  - uid: 75
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 0.5,-3.5
       parent: 1
-- proto: DrinkMugMetal
-  entities:
-  - uid: 75
-    components:
-    - type: Transform
-      pos: 2.7803764,1.0117805
-      parent: 1
-    - type: SolutionContainerManager
-      solutions:
-        drink:
-          temperature: 293.15
-          canReact: True
-          maxVol: 20
-          name: null
-          reagents:
-          - data: null
-            ReagentId: IrishCoffee
-            Quantity: 20
 - proto: DrinkWhiskeyBottleFull
   entities:
   - uid: 14
@@ -632,6 +601,14 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 1.5,-2.5
       parent: 1
+- proto: ExtinguisherCabinetFilled
+  entities:
+  - uid: 93
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 3.5,-2.5
+      parent: 1
 - proto: FaxMachineShip
   entities:
   - uid: 73
@@ -645,13 +622,6 @@ entities:
     components:
     - type: Transform
       pos: 2.5,2.5
-      parent: 1
-- proto: FireExtinguisher
-  entities:
-  - uid: 164
-    components:
-    - type: Transform
-      pos: 0.04751718,-1.5270226
       parent: 1
 - proto: GasMixerOnFlipped
   entities:
@@ -795,9 +765,6 @@ entities:
     - type: Transform
       pos: -0.5,2.5
       parent: 1
-    - type: DeviceNetwork
-      deviceLists:
-      - 93
     - type: AtmosPipeColor
       color: '#0055CCFF'
   - uid: 79
@@ -806,9 +773,6 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 2.5,1.5
       parent: 1
-    - type: DeviceNetwork
-      deviceLists:
-      - 93
     - type: AtmosPipeColor
       color: '#0055CCFF'
 - proto: GasVentScrubber
@@ -819,9 +783,6 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 2.5,-0.5
       parent: 1
-    - type: DeviceNetwork
-      deviceLists:
-      - 93
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 107
@@ -830,9 +791,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: 0.5,-1.5
       parent: 1
-    - type: DeviceNetwork
-      deviceLists:
-      - 93
     - type: AtmosPipeColor
       color: '#990000FF'
 - proto: GravityGeneratorMini
