--- a/Resources/Maps/_NF/Shuttles/liquidator.yml
+++ b/Resources/Maps/_NF/Shuttles/liquidator.yml
@@ -505,7 +505,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -1.5,2.5
       parent: 1
-- proto: APCConstructed
+- proto: APCBasic
   entities:
   - uid: 206
     components:
