--- a/Resources/Maps/_NF/Shuttles/Expedition/anchor.yml
+++ b/Resources/Maps/_NF/Shuttles/Expedition/anchor.yml
@@ -1668,17 +1668,16 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 20.5,-9.5
       parent: 1
+  - uid: 638
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -14.5,-21.5
+      parent: 1
   - uid: 1261
     components:
     - type: Transform
       pos: -17.5,-22.5
-      parent: 1
-- proto: AtmosDeviceFanTiny
-  entities:
-  - uid: 638
-    components:
-    - type: Transform
-      pos: -14.5,-21.5
       parent: 1
 - proto: AtmosFixBlockerMarker
   entities:
